# Azamai_pico

./: .gitmodules
firmware/: CMakeLists.txt
firmware/src/: CMakeLists.txt  board_defs.h  button.c  commands.c  config.c  io.c  main.c  rgb.c  tusb_config.h  uart.c  uart.h  usb_descriptors.c
firmware/src/FreeRTOSConfig/: FreeRTOSConfig.h
